test/arrays/ferguson/choose-array/choose-array5.good
choose-array5.chpl:16: error: Reference to scoped variable C reachable after lifetime ends
choose-array5.chpl:19: error: Reference to scoped variable D reachable after lifetime ends
